--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -14,6 +14,20 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
+
+    <!-- widget stuff here -->
+    <script src="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.16.0/js/okta-sign-in.min.js" type="text/javascript"></script>
+    <link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.16.0/css/okta-sign-in.min.css" type="text/css" rel="stylesheet"/>
+    <link href="https://ok1static.oktacdn.com/assets/js/sdk/okta-signin-widget/2.16.0/css/okta-theme.css" type="text/css" rel="stylesheet"/>
+
+    <style>
+        body.login {
+            background-color: #f9f9f9;
+        }
+        #okta-sign-in {
+            min-height: 0 !important;
+        }
+    </style>
 </head>
 <body>
 <header class="site-header">
